<resources>
    <string name="app_name">Yarden</string>

    <!-- login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- real-time asset tracking -->
    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false">123</string>

    <string name="title_activity_maps">Installers Map</string>
    <string name="date">Date</string>
    <string name="no_installs_added_today">No installs added today</string>
    <string name="finished">Finished</string>
    <string name="reached">Reached</string>
    <string name="clear">clear</string>
    <string name="save">save</string>
    <string name="sign_below">↓ Sign Below ↓</string>
    <string name="dd_mm">DD/MM</string>
    <string name="time">00:00</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="marble_size">Marble Size</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="logo">logo</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="customer_s_name">Customer\'s Name</string>
    <string name="colon">:</string>
    <string name="status">Status</string>
    <string name="time_text">Time</string>

</resources>
