<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_below"
        android:textColor="@color/yarden"
        android:textSize="20sp" />

    <com.kyanogen.signatureview.SignatureView xmlns:sign="http://schemas.android.com/apk/res-auto"
        android:id="@+id/view_signature"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        sign:backgroundColor="#ffffff"
        sign:enableSignature="true"
        sign:penColor="#000000"
        sign:penSize="5dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:theme="@style/MyButton" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:theme="@style/MyButton" />
    </LinearLayout>
</LinearLayout>
